# django-blog

./: Makefile  manage.py  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_article_body.py
hexlet_django_blog/templates/: about.html  base.html  index.html
hexlet_django_blog/templates/article/: create.html  edit.html  index.html  show.html
hexlet_django_project/: asgi.py  settings.py  urls.py  wsgi.py
