[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["pyhton-delevoper <viktorov.vadimka@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
